command line render vector blur error, possibly because of linked libs/ proxies #6799

Closed
opened 2007-06-02 18:00:27 +02:00 by bassam kurdali · 3 comments
Member

Resolution: Fixed

%%%I have a file with an animated character that renders fine from the blender UI by hitting F12 or Render as shown:
http://freefactory.org/misc/uirendered.png

but when rendering from the command line, each frame has an intense vector blur, as if the character is going from rest position to the pose in each frame:
http://freefactory.org/misc/clirendered.png

What maybe a factor is that the character is a linked library as a group, being posed by a proxy armature.

Test file :

http://freefactory.org/misc/mancandy.tar.bz2

the tarball contains a dir structure:

/mancandy/

     |____>fkarms_shot1.blend .... this is the file you must render
     |____>lib/
            |____>mancandy_2.0.blend ..... this is the library linked to the 1st file.

obviously to make it work you have to unpack the directory structure unchanged, then render fkarms_shot1.blend with
blender -b path/to/fkarms_shot1.blend -s 1 - e 1 -a
(note I need to render a frame at a time because this is for renderfarm needs)
or launch blender and render from the ui to see the normal behavior.

Expected behavior is that the vector blur from the command line, should match exactly the vector blur from the ui render.
%%%

**Resolution**: Fixed %%%I have a file with an animated character that renders fine from the blender UI by hitting F12 or Render as shown: http://freefactory.org/misc/uirendered.png but when rendering from the command line, each frame has an intense vector blur, as if the character is going from rest position to the pose in each frame: http://freefactory.org/misc/clirendered.png What maybe a factor is that the character is a linked library as a group, being posed by a proxy armature. Test file : http://freefactory.org/misc/mancandy.tar.bz2 the tarball contains a dir structure: /mancandy/ ``` |____>fkarms_shot1.blend .... this is the file you must render |____>lib/ |____>mancandy_2.0.blend ..... this is the library linked to the 1st file. ``` obviously to make it work you have to unpack the directory structure unchanged, then render fkarms_shot1.blend with blender -b path/to/fkarms_shot1.blend -s 1 - e 1 -a (note I need to render a frame at a time because this is for renderfarm needs) or launch blender and render from the ui to see the normal behavior. Expected behavior is that the vector blur from the command line, should match exactly the vector blur from the ui render. %%%
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'

This task was automatically closed as archived as part of migration, because the project or tracker this task belonged to is no longer active.

This task was automatically closed as archived as part of migration, because the project or tracker this task belonged to is no longer active.
Member

Changed status from 'Open' to: 'Archived'

Changed status from 'Open' to: 'Archived'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#6799
No description provided.